@@ -1,5 +1,10 @@
 2008-10-12		olivier
 
+	* dialogs/keyboard-settings/xfce-keyboard-settings.c: Prevent
+	  potential random memory access with broken settings.
+
+2008-10-12		olivier
+
 	* dialogs/keyboard-settings/xfce-keyboard-settings.c: Fix layout not
 	  being shown if no variant is selected.
 
